src/app/pages/home/home.component.scss
.building {
    @media screen and (min-width: 1280px) {
        object-position: 0 -7rem;
    }
    object-position: unset;
    top: 0;
}

.img-container {
    height: 45rem;
}


.main-card-info {
    --border--width: .75rem;
    --border-radius: 2.6rem;
    &::after, &::before {
        content: '';
        display: block;
        position: absolute;
        height: 30%;
        aspect-ratio: 1/1;
        border-color: white;
        border-width: var(--border--width);
    }
    &::before {
        right: 100%;
        bottom: 0;
        transform: translate(var(--border--width), var(--border--width));
        border-bottom-right-radius: var(--border-radius);
        border-top: 0;
        border-left: 0;
    }
    &::after {
        left: 100%;
        bottom: 0;
        transform: translate(calc(var(--border--width) * -1), var(--border--width));
        border-bottom-left-radius: var(--border-radius);
        border-top: 0;
        border-right: 0;
    }

}

